feat: añadir proyecto a la sección Mis proyectos

--- a/index.html
+++ b/index.html
@@ -67,16 +67,30 @@
 <section id="proyectos">
   <div class="container">
   <h2>Mis proyectos</h2>
-  <p>🚧 Proyectos en construcción... Muy pronto estarán disponibles aquí.</p>
+  
 
   <div class="proyectos-container">
     <div class="proyecto-card">
-      <div class="imagen-proyecto"></div>
-      <div class="contenido-proyecto">
-        <h3>Proyecto 1</h3>
-        <p>Próximamente...</p>
-      </div>
+  <div class="imagen-proyecto" style="background-image: url('img/reciclaya-captura.jpg');"></div>
+
+  <a href="https://veronica-gi.github.io/recicla-ya/" target="_blank" class="overlay-link"></a>
+
+  <div class="contenido-proyecto">
+    <h3>¡Recicla YA!</h3>
+    <p>Aplicación educativa con un juego interactivo para aprender a reciclar de forma divertida y secciones informativas sobre la importancia del reciclaje.</p>
+    
+    <div class="tags">
+      <span class="tag">HTML</span>
+      <span class="tag">CSS</span>
+      <span class="tag">JavaScript</span>
     </div>
+    <div class="botones-proyecto">
+      <a href="https://veronica-gi.github.io/recicla-ya/" target="_blank" class="boton">Ver demo</a>
+      <a href="https://github.com/veronica-gi/recicla-ya" target="_blank" class="boton-secundario">Ver Repositorio</a>
+    </div>
+  </div>
+</div>
+
 
     <div class="proyecto-card">
       <div class="imagen-proyecto"></div>
