fix: ajustar posición de tags en sección de proyectos

--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
     <p>Aplicación educativa con un juego interactivo para aprender a reciclar de forma divertida y secciones informativas sobre la importancia del reciclaje.</p>
     
     <div class="tags">
+      <span class="tag">JavaScript</span>
       <span class="tag">HTML</span>
       <span class="tag">CSS</span>
-      <span class="tag">JavaScript</span>
+      
     </div>
     <div class="botones-proyecto">
       <a href="https://veronica-gi.github.io/recicla-ya/" target="_blank" class="boton">Ver demo</a>
@@ -99,6 +100,7 @@
         <p>Próximamente...</p>
         <div class="tags">
           <span class="tag">Javascript</span>
+          <span class="tag">React</span>
           <span class="tag">HTML</span>
           <span class="tag">CSS</span>
         </div>
