feat: añadido proyecto AsturDulce a la sección de proyectos

--- a/index.html
+++ b/index.html
@@ -94,18 +94,43 @@
 
 
     <div class="proyecto-card">
-      <div class="imagen-proyecto"></div>
+      <div class="imagen-proyecto" style="background-image: url('img/asturdulce-captura.jpg');"></div>
       <div class="contenido-proyecto">
-        <h3>Proyecto 2</h3>
-        <p>Próximamente...</p>
+        <h3>AsturDulce</h3>
+        <p>AsturDulce es una aplicación web de recetas que permite explorar postres, filtrarlos por categoría y dificultad,
+        guardar tus favoritos y ver cada receta paso a paso.</p>
         <div class="tags">
           <span class="tag">Javascript</span>
           <span class="tag">React</span>
           <span class="tag">HTML</span>
           <span class="tag">CSS</span>
+
         </div>
-      </div>
+    <div class="botones-proyecto">
+      <a href="https://veronica-gi.github.io/AsturDulce/" target="_blank" class="boton">Ver demo</a>
+      <a href="https://github.com/veronica-gi/AsturDulce.git" target="_blank" class="boton-secundario">Ver Repositorio</a>
     </div>
+  </div>
+</div>
+
+<div class="proyecto-card">
+      <div class="imagen-proyecto"></div>
+      <div class="contenido-proyecto">
+        <h3>Proyecto</h3>
+        <p>Próximamente</p>
+        <div class="tags">
+          <span class="tag">Javascript</span>
+          <span class="tag">React</span>
+          <span class="tag">HTML</span>
+          <span class="tag">CSS</span>
+
+        </div>
+    <div class="botones-proyecto">
+      <a href="" target="_blank" class="boton">Ver demo</a>
+      <a href="" target="_blank" class="boton-secundario">Ver Repositorio</a>
+    </div>
+  </div>
+</div>
 
     <!-- Puedes duplicar más tarjetas -->
   </div>
