feat: añadir proyecto PlantTime al portfolio con enlaces y descripción

--- a/index.html
+++ b/index.html
@@ -114,20 +114,20 @@
 </div>
 
 <div class="proyecto-card">
-      <div class="imagen-proyecto"></div>
+      <div class="imagen-proyecto" style="background-image: url('img/planttime-captura.jpg');"></div>>
       <div class="contenido-proyecto">
-        <h3>Proyecto</h3>
-        <p>Próximamente</p>
+        <h3>Planttime</h3>
+        <p>Aplicación que te ayuda a organizar el cuidado de tus plantas. Registra sus datos, añade fotos, gestiona el riego y la fertilización, y visualiza todo en un calendario</p>
         <div class="tags">
-          <span class="tag">Javascript</span>
+          <span class="tag">Typescript</span>
           <span class="tag">React</span>
           <span class="tag">HTML</span>
-          <span class="tag">CSS</span>
+          <span class="tag">TailwindCSS</span>
 
         </div>
     <div class="botones-proyecto">
-      <a href="" target="_blank" class="boton">Ver demo</a>
-      <a href="" target="_blank" class="boton-secundario">Ver Repositorio</a>
+      <a href="https://veronica-gi.github.io/planttime/" target="_blank" class="boton">Ver demo</a>
+      <a href="https://github.com/veronica-gi/planttime.git" target="_blank" class="boton-secundario">Ver Repositorio</a>
     </div>
   </div>
 </div>
