feat: añadir nuevas tecnologías al portfolio

--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
     <div class="tech-card"><img src="img/javascript.png" alt="JavaScript" title="JavaScript" /></div>
     <div class="tech-card"><img src="img/html.png" alt="HTML5" title="HTML5" /></div>
     <div class="tech-card"><img src="img/css.png" alt="CSS3" title="CSS3" /></div>
+    <div class="tech-card"><img src="img/tailwindcss.png" alt="TailwindCSS" title="TailwindCSS" /></div>
+    <div class="tech-card"><img src="img/typescript.png" alt="TypeScript" title="TypeScript" /></div>
     <div class="tech-card"><img src="img/figma.png" alt="Figma" title="Figma" /></div>
     <div class="tech-card"><img src="img/builder.png" alt="Builder.io" title="Builder" /></div>
     <div class="tech-card"><img src="img/Gitlab.png" alt="Gitlab" title="Gitlab" /></div>
     <div class="tech-card"><img src="img/github.png" alt="GitHub" title="GitHub" /></div>
     <div class="tech-card"><img src="img/react.png" alt="React" title="React" /></div>
+    <div class="tech-card"><img src="img/vite.png" alt="Vite" title="Vite" /></div>
     <div class="tech-card"><img src="img/node.png" alt="Node.js" title="Node" /></div>
     <div class="tech-card"><img src="img/php.png" alt="Php" title="Php" /></div>
     <div class="tech-card"><img src="img/mysql.png" alt="mysql" title="mysql" /></div>
@@ -123,6 +126,7 @@
           <span class="tag">React</span>
           <span class="tag">HTML</span>
           <span class="tag">TailwindCSS</span>
+          <span class="tag">Vite</span>
 
         </div>
     <div class="botones-proyecto">
